fix popup aligning method, fix avatar hover on mobile
add higher transition-duration on touch/hover end

--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -14,7 +14,6 @@
 
   padding: 34px 36px 36px;
   box-sizing: border-box;
-  margin: auto;
 }
 
 @media screen and (max-width: 767px) {
