--- a/src/blocks/popup/__figure/popup__figure.css
+++ b/src/blocks/popup/__figure/popup__figure.css
@@ -1,6 +1,5 @@
 .popup__figure {
   position: relative;
 
-  margin: auto;
   font-size: 0;
 }
